if(WINDOWS_MSVC_X86_64)
  add_subdirectory(msvc-posix-compat)
endif()
add_subdirectory(third_party)
add_subdirectory(android-net)
add_subdirectory(android-emu)
add_subdirectory(android-emugl)
if(NOT OPTION_AEMU_LIBS_ONLY)
  add_subdirectory(emulator)
  add_subdirectory(emulator-check)
  if(NOT LINUX_AARCH64)
    add_subdirectory(tests)
  endif()
else()
  android_install_dependency(all RUNTIME_OS_DEPENDENCIES)
endif()
message(STATUS "Including grpc support")
add_subdirectory(android-grpc)
if(WEBRTC)
  message(STATUS "Including webrtc support")
  add_subdirectory(android-webrtc)
endif()

if(ANDROIDSTUDIO)
  message(STATUS "Including android-studio")
  add_subdirectory(android-studio)
else()
  message(STATUS "Skipping android-studio")
endif()
