if(WINDOWS_MSVC_X86_64)
  add_subdirectory(msvc-posix-compat)
endif()
add_subdirectory(third_party)

add_subdirectory(emu)
add_subdirectory(android-net)
add_subdirectory(android-emu-base)
add_subdirectory(android-emu)
add_subdirectory(android-emugl)
add_subdirectory(coverage-poc)
if(NOT OPTION_AEMU_LIBS_ONLY)
  add_subdirectory(emulator)
  add_subdirectory(emulator-check)
  if(NOT LINUX_AARCH64)
    if(NOT DARWIN_AARCH64)
      add_subdirectory(tests)
    endif()
  endif()
else()
  android_install_dependency(all RUNTIME_OS_DEPENDENCIES)
endif()
add_subdirectory(android-grpc)
if(WEBRTC)
  message(STATUS "Including webrtc support")
  add_subdirectory(android-webrtc)
else()
  add_subdirectory(${AOSP_ROOT}/external/webrtc/third_party/libyuv libyuv)
endif()

add_subdirectory(bluetooth)
if(NOT WEBRTC)
  # We need jsoncpp, which is part of webrtc.
  add_subdirectory(${AOSP_ROOT}/external/webrtc/third_party/jsoncpp jsoncpp)
endif()

if(OPTION_ANDROID_STUDIO)
  message(STATUS "Including android-studio")
  add_subdirectory(android-studio)
endif()

if(HOST_DARWIN_AARCH64 AND DARWIN_X86_64)
  message(
    WARNING "Unable to compile image converter in M1 -> X86 cross build. This will not be installed.")
else()
  add_subdirectory(image_converter)
endif()
