static_library("android_emu_base") {
  include_dirs = [ "." ]
  sources = [
    "android/base/Debug.cpp",
    # "android/base/files/CompressingStream.cpp",
    # "android/base/files/DecompressingStream.cpp",
    "android/base/files/Fd.cpp",
    "android/base/files/IniFile.cpp",
    "android/base/files/InplaceStream.cpp",
    "android/base/files/MemStream.cpp",
    "android/base/files/PathUtils.cpp",
    "android/base/files/StdioStream.cpp",
    "android/base/files/Stream.cpp",
    "android/base/files/StreamSerializing.cpp",
    "android/base/misc/FileUtils.cpp",
    "android/base/misc/HttpUtils.cpp",
    "android/base/misc/StringUtils.cpp",
    "android/base/misc/Utf8Utils.cpp",
    "android/base/network/IpAddress.cpp",
    "android/base/network/NetworkUtils.cpp",
    "android/base/Stopwatch.cpp",
    "android/base/StringFormat.cpp",
    "android/base/StringParse.cpp",
    "android/base/StringView.cpp",
    "android/base/sockets/SocketUtils.cpp",
    "android/base/sockets/SocketWaiter.cpp",
    "android/base/synchronization/MessageChannel.cpp",
    "android/base/Log.cpp",
    "android/base/memory/LazyInstance.cpp",
    "android/base/system/System.cpp",
    "android/base/threads/Async.cpp",
    "android/base/threads/FunctorThread.cpp",
    "android/base/threads/ThreadStore.cpp",
    "android/base/Uri.cpp",
    "android/base/Uuid.cpp",
    "android/base/Version.cpp",
    "android/utils/aconfig-file.c",
    "android/utils/assert.c",
    "android/utils/async.cpp",
    "android/utils/bufprint.c",
    "android/utils/bufprint_system.cpp",
    "android/utils/cbuffer.c",
    "android/utils/debug.c",
    "android/utils/debug_wrapper.cpp",
    "android/utils/dll.c",
    "android/utils/dirscanner.cpp",
    "android/utils/eintr_wrapper.c",
    "android/utils/exec.cpp",
    "android/utils/fd.cpp",
    "android/utils/filelock.cpp",
    "android/utils/file_data.c",
    "android/utils/file_io.cpp",
    "android/utils/format.cpp",
    "android/utils/host_bitness.cpp",
    "android/utils/http_utils.cpp",
    "android/utils/iolooper.cpp",
    "android/utils/ini.cpp",
    "android/utils/intmap.c",
    "android/utils/ipaddr.cpp",
    "android/utils/lineinput.c",
    "android/utils/lock.cpp",
    "android/utils/mapfile.c",
    "android/utils/misc.c",
    "android/utils/panic.c",
    "android/utils/path.cpp",
    "android/utils/path_system.cpp",
    "android/utils/property_file.c",
    "android/utils/reflist.c",
    "android/utils/refset.c",
    "android/utils/sockets.c",
    "android/utils/stralloc.c",
    "android/utils/stream.cpp",
    "android/utils/string.cpp",
    "android/utils/system.c",
    "android/utils/system_wrapper.cpp",
    "android/utils/tempfile.c",
    "android/utils/timezone.cpp",
    "android/utils/uri.cpp",
    "android/utils/utf8_utils.cpp",
    "android/utils/vector.c",
    "android/utils/x86_cpuid.cpp",
  ]
}
