# Declarations related to the AndroidEmu library, which group Android-specific
# emulation features that are used by both QEMU1 and QEMU2 engines.
#
# This file defines the following important modules:
#
#  - android-emu-base
#  - android-emu
#  - emulator-libui
#
# And corresponding unit-tests.
#
# See below for their documentation. Moreoever, it defines the following
# variables that can be used outside of this script:
#
#   ANDROID_EMU_BASE_INCLUDES
#       List of include paths to be used by any module that depends on
#       AndroidEmuBase
#
#   ANDROID_EMU_BASE_STATIC_LIBRARIES
#       List of static libraries to be used by any executable that depends on
#       AndroidEmuBase.
#
#   ANDROID_EMU_BASE_LDLIBS
#       List of system libraries to be used by any executable or shared library
#       that depends on AndroidEmuBase.
#
#   ANDROID_EMU_INCLUDES
#       List of include paths to be used by any module that depends on
#       AndroidEmu
#
#   ANDROID_EMU_STATIC_LIBRARIES
#       List of static libraries to be used by any executable that depends on
#       AndroidEmu.
#
#   ANDROID_EMU_LDLIBS
#       List of system libraries to be used by any executable or shared library
#       that depends on AndroidEmu.
#

###############################################################################

_ANDROID_EMU_ROOT = "."

# all includes are like 'android/...', so we need to count on that
ANDROID_EMU_BASE_INCLUDES = "$_ANDROID_EMU_ROOT"


###############################################################################
#
#  android-emu-base
#
#  This is a static library containing the low-level system interfaces
#  provided by android/base/ and android/utils/. It should only depend on
#  system and language runtime headers and libraries, and nothing else.
#  Everything that depends on the host implementation, e.g. Looper, shouldn't
#  be part of this library, but goes into android-emu
#

import("//external/qemu/android/config.gni")
import("//external/qemu/android/third_party/liblz4.gni")

static_library("android-emu-base") {
  # add this to use android as folder name
  set_sources_assignment_filter([])
  sources = [
    "android/base/Debug.cpp",
    "android/base/files/CompressingStream.cpp",
    "android/base/files/DecompressingStream.cpp",
    "android/base/files/Fd.cpp",
    "android/base/files/IniFile.cpp",
    "android/base/files/InplaceStream.cpp",
    "android/base/files/MemStream.cpp",
    "android/base/files/PathUtils.cpp",
    "android/base/files/StdioStream.cpp",
    "android/base/files/Stream.cpp",
    "android/base/files/StreamSerializing.cpp",
    "android/base/misc/FileUtils.cpp",
    "android/base/misc/HttpUtils.cpp",
    "android/base/misc/StringUtils.cpp",
    "android/base/misc/Utf8Utils.cpp",
    "android/base/network/IpAddress.cpp",
    "android/base/network/NetworkUtils.cpp",
    "android/base/Stopwatch.cpp",
    "android/base/StringFormat.cpp",
    "android/base/StringParse.cpp",
    "android/base/StringView.cpp",
    "android/base/sockets/SocketUtils.cpp",
    "android/base/sockets/SocketWaiter.cpp",
    "android/base/synchronization/MessageChannel.cpp",
    "android/base/Log.cpp",
    "android/base/memory/LazyInstance.cpp",
    "android/base/system/System.cpp",
    "android/base/threads/Async.cpp",
    "android/base/threads/FunctorThread.cpp",
    "android/base/threads/ThreadStore.cpp",
    "android/base/Uri.cpp",
    "android/base/Uuid.cpp",
    "android/base/Version.cpp",
    "android/utils/aconfig-file.c",
    "android/utils/assert.c",
    "android/utils/async.cpp",
    "android/utils/bufprint.c",
    "android/utils/bufprint_system.cpp",
    "android/utils/cbuffer.c",
    "android/utils/debug.c",
    "android/utils/debug_wrapper.cpp",
    "android/utils/dll.c",
    "android/utils/dirscanner.cpp",
    "android/utils/eintr_wrapper.c",
    "android/utils/exec.cpp",
    "android/utils/fd.cpp",
    "android/utils/filelock.cpp",
    "android/utils/file_data.c",
    "android/utils/file_io.cpp",
    "android/utils/format.cpp",
    "android/utils/host_bitness.cpp",
    "android/utils/http_utils.cpp",
    "android/utils/iolooper.cpp",
    "android/utils/ini.cpp",
    "android/utils/intmap.c",
    "android/utils/ipaddr.cpp",
    "android/utils/lineinput.c",
    "android/utils/lock.cpp",
    "android/utils/mapfile.c",
    "android/utils/misc.c",
    "android/utils/panic.c",
    "android/utils/path.cpp",
    "android/utils/path_system.cpp",
    "android/utils/property_file.c",
    "android/utils/reflist.c",
    "android/utils/refset.c",
    "android/utils/sockets.c",
    "android/utils/stralloc.c",
    "android/utils/stream.cpp",
    "android/utils/string.cpp",
    "android/utils/system.c",
    "android/utils/system_wrapper.cpp",
    "android/utils/tempfile.c",
    "android/utils/timezone.cpp",
    "android/utils/uri.cpp",
    "android/utils/utf8_utils.cpp",
    "android/utils/vector.c",
    "android/utils/x86_cpuid.cpp",
  ]

  if (is_win) {
    sources += [
      "android/base/files/preadwrite.cpp",
      "android/base/threads/Thread_win32.cpp",
      "android/base/system/Win32Utils.cpp",
      "android/base/system/Win32UnicodeString.cpp",
      "android/utils/win32_cmdline_quote.cpp",
      "android/utils/win32_unicode.cpp",
    ]
  } else {
    sources += [
      "android/base/threads/Thread_pthread.cpp",
    ]
  }

  if (is_mac) {
    sources += [
      "android/base/system/system-native-mac.mm",
    ]
  }

  cflags = [
    "-Werror=implicit-function-declaration",
    "-Wno-sign-compare",
    #"-Wno-header-hygiene",
  ]

  include_dirs = [
    "$ANDROID_EMU_BASE_INCLUDES",
    "$LZ4_INCLUDES",
  ]
}
